# workout-tracking

./: .gitignore  CLAUDE.md  README.md  TRAINING_PLAN.md  pyproject.toml
backend/: adapt.py  cli.py  database.py  fit_export.py  gym.py  historical.py  icu-push-weekly.sh  intervals_icu.py  llm.py  main.py  nutrition.py  peer_splits.py  race_capstone.py  race_engine.py  race_mental.py  race_research.py  requirements.txt  strava.py  ultra_plan.py  vault.py
backend/data/: br100_2025_analog_splits.csv  br100_2025_cohort_splits.csv  br100_aid_stations_2026.csv  br100_crew_protocol.yaml  br100_mental_race_plan.yaml
backend/tests/: test_aid_stations.py  test_capstone.py  test_crew_manual.py  test_feedback_save.py  test_historical.py  test_peer_splits.py  test_race_mental.py  test_ultra_plan.py  test_vault.py
docs/race/: BR100_crew_manual_draft.md  CREW_MANUAL_DESIGN.md
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ActiveWorkout.jsx  GenerateWorkout.jsx  History.jsx  LogWorkout.jsx  PRBoard.jsx  ProgressAnalysis.jsx  StravaImport.jsx  TrainingPlans.jsx
