[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workout-app"
version = "0.1.0"
description = "BR100 ultramarathon training coach and race day engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "anthropic>=0.78.0",
    "pydantic==2.9.2",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "fit-tool>=0.9.13",
    "gpxpy>=1.6.0",
]

[project.scripts]
ultra = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]
